# ans-scraper-rs

./: .gitignore  Cargo.toml  daemon_state.json  justfile
src/: lib.rs
src/dexes/: astroport.rs  mod.rs
src/helpers/: chain_registry.rs  mod.rs
src/traits/: dex.rs
