[package]
name = "ans-scraper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]

cosmwasm-std = "1.1"
cosmwasm-schema = "1.1"
cw-controllers = "1.0"
cw-utils = "1.0"
cw-storage-plus = "1.0"
cw2 = "1.0"
cw20 = "1.0"
cw-asset = "3.0"
cw-ownable = "0.5"
cw-address-like = "1.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"
protobuf = { version = "2", features = ["with-bytes"] }
clap = { version = "4.0.32", features = ["derive"] }
semver = "1.0"
cw-semver = "1.0"
tokio = { version = "1.4", features = ["full"] }
anyhow = "1"

log = "0.4.14"
serde_json = "1.0.79"
reqwest = { version = "0.11.9" }
dotenv = "0.15.0"
env_logger = "0.10.0"

cosmos-sdk-proto = { version = "0.17.0", features = [
    "grpc-transport",
    "cosmwasm",
] }
serde-cw-value = "0.7.0"
sha256 = "1.1.1"
ibc-chain-registry = { version = "0.23.0" }
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }


abstract-core = { version = "0.14", features = ["boot"] }
abstract-boot = { version = "0.14", features = ["daemon"] }

cw-orch = { package = "cw-orc", path = "../BOOT/cw-orc", features = ["daemon"] }
cw20-base-orch = { package = "cw20-base", git = "https://github.com/AbstractSDK/cw-plus" }

# Integrations
astroport = { path = "../astroport-core/packages/astroport", features = ["boot"] }
